# classphoto

./: .gitignore  CMakeLists.txt  README.md  availableitemsmodel.cpp  availableitemsmodel.h  classnameingraphicsview.cpp  classnameingraphicsview.h  classphoto.pro  createclassdlg.cpp  createclassdlg.h  createclassdlg.ui  croppicture.cpp  croppicture.h  croprenderer.cpp  croprenderer.h  editshowclassname.cpp  editshowclassname.h  icons.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  picture.cpp  picture.h  project.cpp  project.h  settings.cpp  settings.h  studentbase.cpp  studentbase.h  studenteditdialog.cpp  studenteditdialog.h  studenteditdialog.ui  studentingraphicsview.cpp  studentingraphicsview.h  studentlistitem.cpp  studentlistitem.h  studentlistitemdelegate.cpp  studentlistitemdelegate.h  studentnamedialog.cpp  studentnamedialog.h  (+4 more)
packaging/config/: config.xml
resources/stylesheets/: defaultTheme.css
